<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stl.musicplayer.app.DashboardActivity"
    android:background="#4a4a4a">

    <LinearLayout
        android:id="@+id/dashboard_header_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/report_header"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report Dashboard"
            android:textColor="#f2e88f"
            android:textStyle="bold"
            android:textSize="20sp"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dashboard_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/dashboard_header_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="1dip">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:background="@drawable/report_header"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Day Report  :"
                android:id="@+id/tv_report_type"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Date..."
                android:id="@+id/tv_date"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnChangeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change\nDate"
                android:layout_weight="1"/>
        </LinearLayout>
        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_height="200dp"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"

            android:background="@drawable/bg_report"
            android:padding="2dp">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/report_body_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:measureWithLargestChild="false"
                    >
                    <TableRow
                        android:id="@+id/tr_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:id="@+id/tv_th1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_head_0"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="55dp"></TextView>

                        <TextView
                            android:id="@+id/tv_th2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_head_1"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="90dp"></TextView>

                        <TextView
                            android:id="@+id/tv_th3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_head_2"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="85dp"></TextView>

                        <TextView
                            android:id="@+id/tv_th4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_head_3"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="85dp"/>
                        <TextView
                            android:id="@+id/tv_th41"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_head_31"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="85dp"/>

                        <TextView
                            android:id="@+id/tv_th5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_head_4"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="85dp"/>

                    </TableRow>
                    <TableRow
                        android:id="@+id/tr_body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_td1"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_body_1"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            android:minWidth="55dp"></TextView>

                        <TextView
                            android:id="@+id/tv_td2"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="90dp"></TextView>

                        <TextView
                            android:id="@+id/tv_td3"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"></TextView>

                        <TextView
                            android:id="@+id/tv_td4"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"/>
                        <TextView
                            android:id="@+id/tv_td41"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"/>
                        <TextView
                            android:id="@+id/tv_td5"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"/>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_td6"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="@string/report_body_2"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:minWidth="55dp"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:id="@+id/tv_td7"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="90dp"></TextView>

                        <TextView
                            android:id="@+id/tv_td8"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"></TextView>

                        <TextView
                            android:id="@+id/tv_td9"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"/>
                        <TextView
                            android:id="@+id/tv_td91"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"/>

                        <TextView
                            android:id="@+id/tv_td10"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/cell_shape"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textSize="@dimen/text_size_normal"
                            android:gravity="center"
                            android:minWidth="85dp"/>

                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>


    <!--End of ReportLayout-->
</RelativeLayout>
